--- a/src/v2/ch03/mail/mail.properties
+++ b/src/v2/ch03/mail/mail.properties
@@ -1,4 +1,3 @@
 mail.transport.protocol=smtps
 mail.smtps.auth=true
-mail.smtps.host=smtp.gmail.com
-mail.smtps.user=cayhorstmann@gmail.com
+mail.smtps.host=smtp.163.com
